fix: missing padding for breadcrumb <span>

--- a/src/scss/kratosr.scss
+++ b/src/scss/kratosr.scss
@@ -1299,7 +1299,7 @@ ul.kratos-post-meta {
 
 .kratos-breadcrumb {
   margin: 10px 25px;
-  a {
+  > a, span {
     padding: 0 5px;
   }
 }
